test_regress/t/t_interface_input_port_assign_bad.out
%Error-ASSIGNIN: t/t_interface_input_port_assign_bad.v:10:10: Assigning to input/const variable: 'clk'
                                                            : ... note: In instance 't'
   10 |   assign clk = 1'b0;   
      |          ^~~
                 ... For error description see https://verilator.org/warn/ASSIGNIN?v=latest
%Error: Exiting due to
